--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="stylesheet" href="src/app.css">
 		<meta name="viewport" content="width=device-width" />
+		<style type="text/css" href="src/app.css"></style>
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
